Fixing resume profiles alignment

--- a/assets/_sass/component/_resume-profiles.scss
+++ b/assets/_sass/component/_resume-profiles.scss
@@ -23,6 +23,7 @@
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-column-gap: 2rem;
+      margin: 0 auto;
     }
 
     @media screen and (min-width: $large) {
